# anserno

./: .dockerignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-test-push.yml  release.yaml
anserno/: Cargo.toml  README.md
anserno-core/: Cargo.toml  README.md
anserno-core/src/: config.rs  context.rs  lib.rs  url_params.rs
anserno-core/src/error/: json_response_error.rs  mod.rs  response_error.rs
anserno-core/src/handlers/: api.rs  authors.rs  books.rs  index.rs  search.rs  series.rs  static_files.rs
anserno-core/static/script/: collapsing-cards.js  reader.js
anserno-core/templates/: _macros.html  container.html  list.html
anserno-core/templates/books/: id.html
anserno/src/: cli.rs  error.rs  lib.rs  logging.rs  main.rs
calibre-data/: Cargo.toml  README.md
calibre-data/src/: error.rs  lib.rs
calibre-data/src/entities/: authors.rs  books.rs  books_authors_link.rs  books_series_link.rs  comments.rs  data.rs  mod.rs  prelude.rs  search_index.rs  series.rs
calibre-data/src/pagination/: bucket_paginator.rs  mod.rs  query_paginator.rs  records_query.rs
calibre-data/src/queries/: create_flat_books_view.rs  create_search_index.rs  mod.rs  populate_search_index.rs  static_query.rs
calibre-data/src/query/: function_name.rs  mod.rs  select_alias.rs
container/: Dockerfile
container/root/etc/: group  passwd
hypertext-application-language/: Cargo.toml  README.md
hypertext-application-language/src/: error.rs  lib.rs  link.rs  resource.rs
hypertext-application-language/src/ext/: mod.rs  sea_orm.rs
pagination/: Cargo.toml  LICENSE  README.md
pagination/src/: config.rs  display.rs  index.rs  lib.rs  page.rs  paginator.rs
src/: error.rs  lib.rs  main.rs
src/app/: configure.rs  context.rs  mod.rs
src/app/handlers/: api.rs  authors.rs  books.rs  index.rs  mod.rs  search.rs  series.rs  static_files.rs
src/entities/: authors.rs  books.rs  books_authors_link.rs  books_series_link.rs  comments.rs  data.rs  flat_books.rs  mod.rs  prelude.rs  search_index.rs  series.rs
src/handlers/: api.rs  authors.rs  books.rs  index.rs  mod.rs  search.rs  series.rs  static_files.rs
src/hypertext_application_language/: link.rs  mod.rs  model.rs  resource.rs
src/jhal/: jhal_link.rs  jhal_model.rs  jhal_resource.rs  mod.rs
src/pagination/: mod.rs  page.rs  paginator.rs  slice_paginator.rs  substring_bucket_paginator.rs
src/queries/: anserno_query.rs  flat_books.rs  function_name.rs  mod.rs  paginator.rs  search.rs  search_index.rs  select_alias.rs
static/script/: reader.js
static/style/: reader.css  style.css
templates/: _layout.html  _macros.html  container.html  error.html  list.html
templates/books/id/: read.html
