[package]
name = "anserno"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "anserno-server"
path = "src/main.rs"

[features]
search = []

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive", "env"] }
derive_builder = { version = "0.12.0", features = ["clippy"] }
openssl = { version = "0.10.60", features = ["vendored"] }
openssl-sys = { version = "0.9.96", features = ["vendored"] }
reqwest = "0.11.18"
sea-orm = { version = "0.11.3", features = ["runtime-actix", "sqlx-sqlite", "runtime-actix-native-tls"] }
serde = { version = "1.0.171", features = ["serde_derive"] }
serde_json = "1.0.102"
tempfile = "3.6.0"
tera = "1.19.0"
tracing = "0.1.37"
tracing-actix-web = "0.7.5"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter", "registry"] }
url = "2.4.0"
