[package]
name = "anserno"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "anserno-server"
path = "src/main.rs"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.1"
async-trait = "0.1.76"
clap = { version = "4.4.12", features = ["env", "derive", "unicode"] }
derive_builder = { version = "0.12.0", features = ["clippy"] }
reqwest = { version = "0.11.23", features = ["rustls-tls"], default-features = false }
sea-orm = { version = "0.12.10", features = ["runtime-actix", "sqlx-sqlite", "runtime-actix-rustls"] }
serde = "1.0.193"
serde_json = "1.0.109"
tempfile = "3.9.0"
tera = "1.19.1"
tracing = "0.1.40"
tracing-actix-web = "0.7.9"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
url = "2.5.0"
