[package]
name = "calibre-data"
edition = "2021"
version.workspace = true
authors.workspace = true
description = ""

[dependencies]
chrono = "0.4.39"
decimal = "2.1.0"
futures-util = "0.3.31"
hypertext-application-language = { path = "../hypertext-application-language", optional = true, features = [ "sea-orm" ] }
indoc = "2.0.5"
pagination = { path = "../pagination", features = [ "serde" ] }
reqwest = { version = "0.12.11", features = [ "charset", "stream", "rustls-tls" ], default-features = false }
sea-orm = { version = "1.1.3", default-features = false, features = [ "macros", "with-chrono", "with-rust_decimal", "with-json", "with-time", "runtime-tokio", "sqlx", "sqlx-sqlite" ] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tempfile = "3.14.0"
tracing = { version = "0.1.41", optional = true }
url = { version = "2.5.4", features = ["serde"] }

[features]
default = ["hal", "tracing"]
hal = ["dep:hypertext-application-language"]
tracing = ["dep:tracing"]
