[package]
name = "hypertext-application-language"
edition = "2021"
version.workspace = true
authors.workspace = true
description = ""
readme = "README.md"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.134" }
sea-orm = { version = "1.1.3", optional = true, default-features = false, features = ["with-json"] }

[features]
default = []
sea-orm = ["dep:sea-orm"]
